# jot

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh  jot.spec
.github/workflows/: ci.yml  release.yml
src/: config.rs  db.rs  main.rs  tui.rs
