[package]
name = "jotun"
version = "0.2.0"
edition = "2024"
authors = ["dev-Aatif"]
description = "A lightning-fast, terminal-native note-taking tool built in Rust."
repository = "https://github.com/dev-Aatif/jot"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
dirs = "5.0"
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
syntect = "5.2"
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = { version = "0.27", features = ["events"] }
